--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,11 +1,10 @@
 * {
-    font-family: "Hack Nerd Font", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: "JetBrainsMono Nerd Font";
     font-size: 14px;
     font-weight: 800;
     min-height: 0;
     border: none;
     border-radius: 0;
-
 }
 
 window.DP-3 * {
