--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,7 +7,7 @@
     border-radius: 0;
 }
 
-window.DP-3 * {
+window.DP-2 * {
     font-size: 12px;
 }
 
@@ -31,7 +31,7 @@ tooltip {
     border-radius: 10px;
     border-width: 1px;
     border-style: solid;
-    border-color: #81A1C1;
+    border-color: #5E81AC;
     color: #B3B8C3;
 }
 
@@ -85,12 +85,12 @@ button:hover {
 
 #workspaces button.active {
     background-color: #292C37;
-    box-shadow: inset 0 -3px #81A1C1;
+    box-shadow: inset 0 -3px #5E81AC;
 }
 
 #workspaces button.visible:not(.active) {
     background-color: #292C37;
-    box-shadow: inset 0 -3px #81A1C1;
+    box-shadow: inset 0 -3px #5E81AC;
 }
 
 #workspaces button.urgent {
