--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,105 +1,71 @@
 * {
-    font-family: "JetBrainsMono Nerd Font";
-    font-size: 14px;
-    font-weight: 800;
-    min-height: 0;
-    border: none;
-    border-radius: 0;
+  /* font-family: "JetBrainsMono Nerd Font"; */
+  font-family: "Hack Nerd Font Propo";
+  font-size: 16px;
+  font-weight: 700;
+  min-height: 0;
+  border: none;
+  border-radius: 0;
 }
 
 window.DP-2 * {
-    font-size: 12px;
+  font-size: 14px;
 }
 
-
 window#waybar {
-    /* background-color: rgba(43, 48, 59, 0.5); */
-    /* background-color: rgba(43, 48, 59, 1); */
-    background-color: #23252E;
-    color: #B3B8C3;
-    transition-property: background-color;
-    transition-duration: .5s;
+  background: #23252e;
+  color: #b3b8c3;
 }
 
 window#waybar.hidden {
-    opacity: 0.2;
+  opacity: 0.2;
 }
 
-/* tooltip box */
 tooltip {
-    background-color: #23252E;
-    border-radius: 10px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #5E81AC;
-    color: #B3B8C3;
+  background-color: #23252e;
+  border-radius: 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #5e81ac;
 }
 
-/* tooltip content */
 tooltip label {
-    /* font-size: 14px; */
-    color: #B3B8C3;
-}
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #B3B8C3;
-}
-*/
-
-window#waybar.termite {
-    background-color: #23252E;
-}
-
-window#waybar.chromium {
-    background-color: #23252E;
-    border: none;
+  color: #b3b8c3;
 }
 
 button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
-    border: none;
-    border-radius: 0;
+  /* Use box-shadow instead of border so the text isn't offset */
+  box-shadow: inset 0 -3px transparent;
+  /* Avoid rounded borders under each button name */
+  border: none;
+  border-radius: 0;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
-    background: inherit;
-    box-shadow: inset 0 -3px #A3BE8C;
+  background: inherit;
+  box-shadow: inset 0 -3px #a3be8c;
 }
 
 #workspaces button {
-    padding: 0 5px;
-    background-color: transparent;
-    color: #B3B8C3;
-}
-
-#workspaces button:hover {
-    /* background: rgba(0, 0, 0, 0.2); */
+  padding: 0 5px;
+  background-color: transparent;
+  color: #b3b8c3;
 }
 
 #workspaces button.active {
-    background-color: #292C37;
-    box-shadow: inset 0 -3px #5E81AC;
+  background-color: #292c37;
+  box-shadow: inset 0 -3px #5e81ac;
 }
 
 #workspaces button.visible:not(.active) {
-    background-color: #292C37;
-    box-shadow: inset 0 -3px #5E81AC;
+  background-color: #292c37;
+  box-shadow: inset 0 -1px #b3b8c3;
 }
 
 #workspaces button.urgent {
-    background-color: #BF616A;
-}
-
-#mode {
-    background-color: #23252E;
-    border-bottom: 3px solid #B3B8C3;
+  background-color: #292c37;
+  box-shadow: inset 0 -3px #bf616a;
 }
 
 #clock,
@@ -109,25 +75,27 @@ button:hover {
 #disk,
 #temperature,
 #backlight,
-#network,
+/* #network, */
 #pulseaudio,
 #wireplumber,
 #custom-media,
+#custom-gpuinfo,
+#custom-weather,
 #tray,
 #mode,
-#idle_inhibitor,
+/* #idle_inhibitor, */
 #scratchpad,
 #window,
 #workspaces {
-    margin: 0 4px;
+  margin: 0 3px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+  margin-right: 0;
 }
